# vAuth

./: .gitattributes  CMakeLists.txt  README.md  SHA_256.h  accounts.txt  cert.pem  compile.txt  key.pem
Dependencies/: accounts.txt  cert.pem  key.pem  or_print.txt  server.js  vAuth.cpp
Dependencies/Include/CRC32/: CRC32.hpp
Dependencies/Include/HTTP/: HTTP.h
Source/vAuth/Core/: vAuth.cpp
Source/vAuth/Payment/: PaymentProcessor.cpp  PaymentProcessor.h  Transaction.cpp  Transaction.h
Source/vAuth/Payment/PayPal/: PayPal.cpp  PayPal.h
auravyx/: Auravyx-Auth-Server.cpp  paypal_ipn.py  server.out
auravyx/HTTP/: HTTP.h
